# Unet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  qc_build_dataset.py  training_history.npz
gnn/: __init__.py  conditional_gnn.py  data.py  eirene_gnn.py  layers.py  model.py  train_eirene_gnn.py  train_gnn.py
mlp/: build_2d_database.py  launch_mlp_2d.sh  train_2d.py
scripts/: build_coupling_dataset.py  energy.py  eval_inverse_cycle_conditional_unet.py  eval_source_from_plasma_mesh.py  get_plasma_data.py  launch_ablation.sh  make_workflow_figure.py  nersc_train_gnn.sh  plot_Sp_showcase.py  plot_density_showcase.py  plot_inverse_correlation.py  plot_inverse_param_correlation_from_csv.py  plot_model_architecture_diagram.py  plot_paper_evaluation.py  plot_paper_evaluation_mesh.py  plot_surrogate_comparison_grid.py  predict_and_plot.py  qc_build_dataset.py  run_ablation_sweep.py  run_conditional_unet_pipeline.py  run_full_workflow.sh  run_latent_pipeline.py  run_source_from_plasma_pipeline.py  solarisV4.ipynb  solps2unet.py  source.py  tiny_dataset.npz  train_inverse_mlp.py  train_unet.py  training_history.npz
solpex/: __init__.py  data.py  latent.py  losses.py  models.py  plotting.py  predict.py  train.py  utils.py
solpex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
solpex_autoresearch/: prepare.py  program.md  results.tsv  train.py
solps_ai/: __init__.py  data.py  latent.py  losses.py  models.py  nn_learner.py  plotting.py  predict.py  train.py  utils.py
solps_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+25 files in other folders)
