[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solps-ai"          # distribution name (can have hyphen)
version = "0.1.0"
description = "U-Net SOLPS Te predictor"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solps_ai*"]

