[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solpex"
version = "0.1.0"
description = "SOLPEx: ML surrogate models for SOLPS-ITER edge plasma predictions"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "matplotlib",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solpex*"]
